--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.10.0 FATAL_ERROR)
 project(circurly VERSION 0.1.0 LANGUAGES C CXX)
 
+add_subdirectory("lib")
+
 set(CIR_SOURCES
 	"src/main.cpp"
 )
@@ -8,6 +10,8 @@ set(CIR_SOURCES
 add_executable(circurly ${CIR_SOURCES})
 
 target_include_directories(circurly PRIVATE "src")
+
+target_link_libraries(circurly PRIVATE glfw glad2 imgui)
 
 set_target_properties(circurly PROPERTIES
 	CXX_STANDARD 17
