feat: open window

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -5,5 +5,5 @@ add_library(imgui "imgui/imgui.cpp")
 target_include_directories(imgui PUBLIC "imgui")
 
 set(GLAD_SOURCES_DIR "${CMAKE_CURRENT_SOURCE_DIR}/glad2")
-glad_add_library(glad2 REPRODUCIBLE MX API gl:core=3.3)
+glad_add_library(glad2 REPRODUCIBLE API gl:core=3.3)
 
