refactor: use app state to control pages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ add_subdirectory("lib")
 set(CIR_SOURCES
 	"src/main.cpp"
 	"src/core/app.cpp"
-	"src/pages/home_page.cpp"
+	"src/pages/start_page.cpp"
 	"src/pages/page.cpp"
 	"src/render/context.cpp"
 	"src/render/renderer.cpp"
