--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "lib/imgui"]
 	path = lib/imgui
 	url = https://github.com/ocornut/imgui.git
+	branch = docking
 [submodule "lib/glad2"]
 	path = lib/glad2
 	url = https://github.com/Dav1dde/glad.git
